[gd_scene load_steps=6 format=3 uid="uid://bnp5shbx7mx1b"]

[ext_resource type="Script" uid="uid://sasynxu2mfd8" path="res://scripts/login.gd" id="1_opchc"]
[ext_resource type="FontFile" uid="uid://ceala3nd5qfyv" path="res://fontes/ByteBounce.ttf" id="2_tor08"]

[sub_resource type="FontVariation" id="FontVariation_opchc"]
base_font = ExtResource("2_tor08")

[sub_resource type="FontVariation" id="FontVariation_fvljp"]
base_font = ExtResource("2_tor08")

[sub_resource type="FontVariation" id="FontVariation_tor08"]
base_font = ExtResource("2_tor08")

[node name="login" type="Node2D"]
script = ExtResource("1_opchc")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -739.0
offset_top = -411.0
offset_right = 779.0
offset_bottom = 421.0
color = Color(0.209908, 0.209908, 0.209908, 1)

[node name="login" type="ColorRect" parent="."]
offset_left = -441.0
offset_top = -179.0
offset_right = 440.0
offset_bottom = 188.0
color = Color(0.315102, 0.290606, 0.230582, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="login"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
offset_left = 4.0
offset_top = 7.0
offset_right = 882.0
offset_bottom = 367.0
alignment = 1

[node name="inventario" type="HBoxContainer" parent="login/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="nick" type="TextEdit" parent="login/VBoxContainer/inventario"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
theme_override_fonts/font = SubResource("FontVariation_opchc")
scroll_past_end_of_file = true

[node name="inventario_slots" type="PanelContainer" parent="login/VBoxContainer/inventario"]
layout_mode = 2

[node name="nome" type="Label" parent="login/VBoxContainer/inventario/inventario_slots"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
theme_override_fonts/font = SubResource("FontVariation_fvljp")
text = "    Nick    "
horizontal_alignment = 1
vertical_alignment = 1

[node name="icon" type="Sprite2D" parent="login/VBoxContainer/inventario/inventario_slots"]

[node name="inventario3" type="HBoxContainer" parent="login/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="email" type="TextEdit" parent="login/VBoxContainer/inventario3"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
theme_override_fonts/font = SubResource("FontVariation_opchc")
scroll_past_end_of_file = true

[node name="inventario_slots" type="PanelContainer" parent="login/VBoxContainer/inventario3"]
layout_mode = 2

[node name="nome" type="Label" parent="login/VBoxContainer/inventario3/inventario_slots"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
theme_override_fonts/font = SubResource("FontVariation_fvljp")
text = "  E-mail  "
horizontal_alignment = 1
vertical_alignment = 1

[node name="icon" type="Sprite2D" parent="login/VBoxContainer/inventario3/inventario_slots"]

[node name="inventario2" type="HBoxContainer" parent="login/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="senha" type="TextEdit" parent="login/VBoxContainer/inventario2"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
theme_override_fonts/font = SubResource("FontVariation_tor08")
scroll_past_end_of_file = true

[node name="inventario_slots" type="PanelContainer" parent="login/VBoxContainer/inventario2"]
layout_mode = 2

[node name="nome" type="Label" parent="login/VBoxContainer/inventario2/inventario_slots"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
theme_override_fonts/font = SubResource("FontVariation_fvljp")
text = "  senha  "
horizontal_alignment = 1
vertical_alignment = 1

[node name="icon" type="Sprite2D" parent="login/VBoxContainer/inventario2/inventario_slots"]

[node name="enviar" type="Button" parent="login/VBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(50, 25)
layout_mode = 2
text = "enviar"

[node name="login2" type="Label" parent="."]
custom_minimum_size = Vector2(30, 30)
offset_left = -104.0
offset_top = -163.0
offset_right = 101.0
offset_bottom = -112.0
theme_override_fonts/font = SubResource("FontVariation_fvljp")
theme_override_font_sizes/font_size = 60
text = "Login"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Camera2D" type="Camera2D" parent="."]

[connection signal="pressed" from="login/VBoxContainer/enviar" to="." method="_on_enviar_pressed"]
